# voiceTest

./: .gitignore  AudioDeviceSelector.cpp  AudioDeviceSelector.h  AudioDeviceSelector.ui  CMakeLists.txt  LoginUi.cpp  LoginUi.h  LoginUi.ui  MainWin.cpp  MainWin.h  MainWin.ui  MdiArea.cpp  MdiArea.h  MdiArea.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  paex_record.cpp
.kdev4/: voiceTest.kdev4
src/: AudioDeviceSelector.cpp  AudioDeviceSelector.h  AudioDeviceSelector.ui  FFTGraph.cpp  FFTGraph.h  FFTGraph.ui  LoginUi.cpp  LoginUi.h  MainWin.cpp  MainWin.h  MainWin.ui  WavFile.cpp  WavFile.h  audioRecorder.cpp  audioRecorder.h  calculateFFT.cpp  calculateFFT.h  main.cpp
